Support environment vars from a secret in chart
To make secure HTTPS configurations using Helm possible, by using
the defined environment variables from the `env.secretName` in the
`git.url`.

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -168,6 +168,11 @@ spec:
           {{- if .Values.extraEnvs }}
 {{ toYaml .Values.extraEnvs | indent 10 }}
           {{- end }}
+          {{- if .Values.env.secretName }}
+          envFrom:
+          - secretRef:
+              name: {{ .Values.env.secretName }}
+          {{- end }}
           args:
           {{- if not .Values.clusterRole.create }}
           - --k8s-allow-namespace={{ .Release.Namespace }}
