--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -197,7 +197,7 @@ git:
 
 registry:
   # Period at which to check for updated images
-  pollInterval: "5m"
+  automationInterval: "5m"
   # Maximum registry requests per second per host
   rps: 200
   # Maximum number of warmer connections to remote and memcache
