Use kustomize for installing gitsrv with GPG
Also, remove parameterization of secret names (in order to simplify things).
We always used the same secret names anyways.

--- a/test/e2e/fixtures/kustom/13_sync_gc/kustomization.yaml
+++ b/test/e2e/fixtures/kustom/13_sync_gc/kustomization.yaml
@@ -1,5 +1,5 @@
 bases:
-- "../base"
+- "../base/flux"
 patchesJson6902:
 ## this patch is for test-specific patches; supply a filename to
 ## install_flux_with_fluxctl and it will use that rather than the
