--- a/test/e2e/fixtures/kustom/base/gitsrv/gitsrv.yaml
+++ b/test/e2e/fixtures/kustom/base/gitsrv/gitsrv.yaml
@@ -23,15 +23,11 @@ spec:
           value: "cluster.git"
         - name: TAR_URL
           value: "https://github.com/fluxcd/flux-get-started/archive/master.tar.gz"
-        - name: GPG_KEYFILE
-          value: /git-server/gpg/flux.asc
         ports:
         - containerPort: 22
           name: ssh
           protocol: TCP
         volumeMounts:
-        - mountPath: /git-server/gpg
-          name: git-gpg-keys
         - mountPath: /git-server/repos
           name: git-server-data
         - mountPath: /git-server/keys
@@ -39,12 +35,9 @@ spec:
       volumes:
       - name: flux-git-deploy
         secret:
-          secretName: $GIT_SECRET_NAME
+          secretName: flux-git-deploy
       - name: git-server-data
         emptyDir: {}
-      - name: git-gpg-keys
-        secret:
-          secretName: $GPG_SECRET_NAME
 ---
 apiVersion: v1
 kind: Service
