--- a/test/e2e/fixtures/kustom/base/flux/e2e_patch.yaml
+++ b/test/e2e/fixtures/kustom/base/flux/e2e_patch.yaml
@@ -7,3 +7,15 @@
 - op: add
   path: /spec/template/spec/containers/0/args/-
   value: --registry-exclude-image=*
+- op: add
+  path: /spec/template/spec/containers/0/volumeMounts/-
+  value:
+    name: known-hosts
+    mountPath: /root/.ssh/known_hosts
+    subPath: known_hosts
+- op: add
+  path: /spec/template/spec/volumes/-
+  value:
+    name: known-hosts
+    configMap:
+      name: flux-known-hosts
