e2e: Test the local Flux version
https://github.com/fluxcd/flux/pull/2577 introduced a regression,
( at https://github.com/fluxcd/flux/pull/2577/files#diff-e76b06a8940cf68dbf66b91380d3dc28L58 )
causing the end-to-end tests to use the latest Flux release instead
of the local version.

--- a/test/e2e/fixtures/kustom/base/flux/e2e_patch.yaml
+++ b/test/e2e/fixtures/kustom/base/flux/e2e_patch.yaml
@@ -1,3 +1,7 @@
+- op: replace
+  path: /spec/template/spec/containers/0/image
+  value: docker.io/fluxcd/flux:latest # test the flux version being developed on and not the latest
+                                      # release
 - op: add
   path: /spec/template/spec/containers/0/args/-
   value: --git-poll-interval=10s
