--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -83,6 +83,8 @@ helmOperator:
   annotations: {}
   tolerations: []
   affinity: {}
+  extraVolumeMounts: []
+  extraVolumes: []
   resources:
     requests:
       cpu: 50m
