--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,9 @@ jobs:
             sudo killall apt-get || true
 
             sudo apt-get update
-            sudo apt-get install -y git rng-tools memcached
+            sudo apt-get install -y git rng-tools memcached parallel
+            mkdir -p "$HOME/.parallel"
+            touch "$HOME/.parallel/will-cite"
             git version
             docker version
       - restore_cache:
