Add comment about ~/.parallel/will-cite

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,9 @@ jobs:
 
             sudo apt-get update
             sudo apt-get install -y git rng-tools memcached parallel
-            mkdir -p "$HOME/.parallel"
-            touch "$HOME/.parallel/will-cite"
+            # avoid needing to invoke parallel with --will-cite,
+            # see e.g see https://bugs.launchpad.net/ubuntu/+source/parallel/+bug/1779764
+            mkdir -p "$HOME/.parallel" && touch "$HOME/.parallel/will-cite"
             git version
             docker version
       - restore_cache:
