Add a ServiceMonitor template to the chart
Provides integration with the Prometheus Operator.

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -295,6 +295,13 @@ extraEnvs: []
 
 prometheus:
   enabled: false
+  serviceMonitor:
+    # Enables ServiceMonitor creation for the Prometheus Operator
+    create: false
+    interval:
+    scrapeTimeout:
+    namespace:
+    additionalLabels: {}
 
 syncGarbageCollection:
   enabled: false
