Be more generous with the unit test timeout
Since the timeout is per package and not per test, I set it to 5m instead of 1m

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,8 @@ jobs:
           keys:
             - go-mod-{{ checksum "go.mod" }}
             - go-mod-
-      - run: make test TEST_FLAGS="-race -tags integration -timeout 60s"
+      # Note that the test timeout is per Go package
+      - run: make test TEST_FLAGS="-race -tags integration -timeout 5m"
       - run: make check-generated
       - run: make all
       - run: make e2e
