--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
       - run: make test TEST_FLAGS="-race -tags integration -timeout 5m"
       - run: make check-generated
       - run: make all
-      - run: make e2e
+      - run: E2E_KIND_CLUSTER_NUM=4 make e2e
       - run: make test-docs
       - save_cache:
           key: cache-{{ checksum "Makefile" }}
