--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -210,7 +210,7 @@ spec:
           - --git-set-author={{ .Values.git.setAuthor }}
           - --git-poll-interval={{ .Values.git.pollInterval }}
           - --git-timeout={{ .Values.git.timeout }}
-          - --sync-interval={{ .Values.git.pollInterval }}
+          - --sync-interval={{ .Values.sync.interval | default .Values.git.pollInterval }}
           - --git-ci-skip={{ .Values.git.ciSkip }}
           {{- if .Values.git.label }}
           - --git-label={{ .Values.git.label }}
